Add configurate, add settings file

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,4 +1,4 @@
-name: chestshop-database
+name: ChestShopDatabase
 version: '${version}'
 main: io.github.md5sha256.chestshopdatabase.ChestshopDatabasePlugin
 api-version: '1.21.8'
